--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link href='https://gnomishdezign.github.io/stylesheets/style.css' rel='stylesheet'>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
