--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href='./stylesheets/style.css' rel='stylesheet'>
+  <link href='https://github.com/nonesynomes/style.css' rel='stylesheet'>
   </head>
 <body>
 <h1>Hello World</h1>
