--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href='https://github.com/NomesyNomes/gnomishdezign/raw/stylesheets/style.css' rel='stylesheet'>
+  <link rel="stylesheet" type="text/css" href="https://NomesyNomes.github.io/style.css>
   </head>
 <body>
 <h1>Hello World</h1>
