--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-  <p>THIS SUCKS!</p>
+<h1>Hello!</h1>
+<p>This is a test</p>
+  <p>THIS SUCKS! - well, it did at first haha</p>
   <p>WORK YOU UTTER BASTARD</p>
+  <p>OH IT WORKS NOW HA</p>
 </body>
 </html>
