--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html>
+  
+  <!-- Start head tag -->
+  
 <head>
+  
+  <!-- Link to stylesheet within GitHub -->
+  
   <link rel="stylesheet" type="text/css" href="style.css">
+  
+  <!-- Title of webpage -->
+  
+  <title>Gnomish Designz</title>
+  
   </head>
+  
+  <!-- Start body tag -->
+  
 <body>
+  <!-- Page heading -->
+  
 <h1>Hello!</h1>
+  
+  <!-- Body -->
 <p>This is a test</p>
   <p>THIS SUCKS! - well, it did at first haha</p>
   <p>WORK YOU UTTER BASTARD</p>
