--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 <h1>Hello!</h1>
   
   <!-- Body -->
-<p>This is a test</p>
-  <p>THIS SUCKS! - well, it did at first haha</p>
-  <p>WORK YOU UTTER BASTARD</p>
-  <p>OH IT WORKS NOW HA</p>
+<p>This is currently a placeholder page for Gnomish Designz</p>
+  <p>More will be added over time, so please check back again.</p>
+  
 </body>
 </html>
