--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   <!-- Start body tag -->
   
-<body bgcolor="black">
+<body style="background-color:black">
   <!-- Page heading -->
   
 <h1>Hello!</h1>
