--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body style="background-color:black">
   <!-- Page heading -->
   
-<h1>Hello!</h1>
+<h1welcome to Gnomish Designz></h1>
   
   <!-- Body -->
 <p>This is currently a placeholder page for Gnomish Designz</p>
