--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   
   <link rel="stylesheet" type="text/css" href="style.css">
   
+  <!-- Font from Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono&family=Square+Peg&display=swap" rel="stylesheet">
+  
   <!-- Title of webpage -->
   
   <title>Gnomish Designz</title>
