--- a/404.html
+++ b/404.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <!-- HTML TAG START -->
 <html>
+  <!-- HEAD TAG START -->
   <head>
+    <title>A kitten pawed at the cable! Hope it didn't get hurt!</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     
+  </head>
+  
+  <!-- BODY TAG START -->
+  
+  <body>
+    <center><img src="/images/gingerkitten.jpg"></center>
+    <h1>This cute kitten pawed at the cable! Meow!</h1>
+    </body
+    </html>
