--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <html>
   <!-- HEAD TAG START -->
   <head>
-    <title>A kitten pawed at the cable! Hope it didn't get hurt!</title>
+    <title>A kitten pawed at the cable!</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     
   </head>
@@ -11,7 +11,7 @@
   <!-- BODY TAG START -->
   
   <body>
-    <center><img src="/images/gingerkitten.jpg"></center>
+    <center><img src="/gnomishdezign/images/gingerkitten.jpg"></center>
     <h1>This cute kitten pawed at the cable! Meow!</h1>
     </body
     </html>
