--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
   
   <!-- BODY TAG START -->
   
-  <body>
+  <body bgcolor="black">
     <center><img src="/gnomishdezign/images/gingerkitten.jpg"></center>
     <h1>This cute kitten pawed at the cable! Meow!</h1>
     </body
