--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
   <!-- BODY TAG START -->
   
   <body bgcolor="black">
-    <center><img src="https://www.github.com/NomesyNomes/gnomishdezign/images/gingerkitten.jpg"></center>
+    <center><img src="images/gingerkitten.jpg" alt="Cute Ginger Kitten"></center>
     <h1>This cute kitten pawed at the cable! Meow!</h1>
     </body
     </html>
