--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <!-- HEAD TAG START -->
   <head>
     <title>A kitten pawed at the cable!</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="main/style.css">
     
   </head>
   
