--- a/404.html
+++ b/404.html
@@ -5,6 +5,8 @@
   <head>
     <title>A kitten pawed at the cable!</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- LINK TO FONT -->
+     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&family=Square+Peg&display=swap" rel="stylesheet">
     
   </head>
   
