--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   <!-- BODY TAG START -->
   
   <body bgcolor="black">
-    <center><img src="images/gingerkitten.jpg" alt="Cute Ginger Kitten"></center>
+    <center><img src="/images/gingerkitten.jpg" alt="Cute Ginger Kitten"></center>
     <h1>This cute kitten pawed at the cable! Meow!</h1>
     </body
     </html>
