--- a/404.html
+++ b/404.html
@@ -15,5 +15,6 @@
   <body bgcolor="black">
     <center><img src="/images/gingerkitten.jpg" alt="Cute Ginger Kitten"></center>
     <h1>This cute kitten pawed at the cable! Meow!</h1>
+    <center><a href="https://nomesynomes.github.io/gnomishdezign/">Back To Main Page</a>
     </body
     </html>
