--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   <!-- BODY TAG START -->
   
   <body bgcolor="black">
-    <center><img src="https://imgur.com/a/F9of6fJ" alt="Cute Ginger Kitten"></center>
+    <center><img src="https://raw.githubusercontent.com/NomesyNomes/gnomishdezign/images/images/gingerkitten.jpg" alt="Cute Ginger Kitten"></center>
     <h1>This cute kitten pawed at the cable! Meow!</h1>
     <center><a href="https://nomesynomes.github.io/gnomishdezign/">Back To Main Page</a>
     </body
