--- a/about.html
+++ b/about.html
@@ -13,3 +13,5 @@
   <p>I originally had a website online at the end of the 90's/early 2000's, and with the passage of time, that site has, thankfully, disappeared. Not that I thought it technically wasn't any good, but as late 90's/early 2000's things go, it WAS sort of cringey.</p>
   
 </body>
+
+</html>
