--- a/about.html
+++ b/about.html
@@ -6,10 +6,13 @@
 <head>
   <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+ 
+  <!-- Font link -->
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono&family=Square+Peg&display=swap" rel="stylesheet">
 </head>
 
 <!-- BODY TAG START -->
-<body bgcolor="black">
+<body style=Background-color:"black">
   <p>Hello, my name is Nomesy (obviously not my real name), and I live in <a href="https://en.wikipedia.org/wiki/Perth">Perth, Western Australia</a></p>
   <p>I originally had a website online at the end of the 90's/early 2000's, and with the passage of time, that site has, thankfully, disappeared. Not that I thought it technically wasn't any good, but as late 90's/early 2000's things go, it WAS sort of cringey.</p>
   
