--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <p>This is currently a placeholder page for Gnomish Designz</p>
   <p>More will be added over time, so please check back again.</p>
   
-  <><a href="https://raw.githubusercontent.com/NomesyNomes/gnomishdezign/main/about.html">About Me</a>
+  <><a href="https://github.com/NomesyNomes/gnomishdezign/blame/main/about.html">About Me</a>
   
 </body>
 </html>
