--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
 
 <!-- BODY TAG START -->
 <body style=Background-color:"black">
-  <p>Hello, my name is Nomesy (obviously not my real name), and I live in <a href="https://en.wikipedia.org/wiki/Perth">Perth, Western Australia</a></p>
-  <p>I originally had a website online at the end of the 90's/early 2000's, and with the passage of time, that site has, thankfully, disappeared. Not that I thought it technically wasn't any good, but as late 90's/early 2000's things go, it WAS sort of cringey.</p>
+  <p class='about'>Hello, my name is Nomesy (obviously not my real name), and I live in <a href="https://en.wikipedia.org/wiki/Perth">Perth, Western Australia</a></p>
+  <p class='about'>I originally had a website online at the end of the 90's/early 2000's, and with the passage of time, that site has, thankfully, disappeared. Not that I thought it technically wasn't any good, but as late 90's/early 2000's things go, it WAS sort of cringey.</p>
   
 </body>
 
