--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 <!-- BODY TAG START -->
 <body style="background-color:black">
-  <div class='about'>Hello, my name is Nomesy (obviously not my real name), and I live in <a href="https://en.wikipedia.org/wiki/Perth">Perth, Western Australia</a></div>
+  <p class='about'>Hello, my name is Nomesy (obviously not my real name), and I live in <a href="https://en.wikipedia.org/wiki/Perth">Perth, Western Australia</a></p>
   
   
 </body>
