--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <!-- BODY TAG START -->
 <body style="background-color:black">
   <h1>About me!</h1>
-  <p class='about'>Hello, my name is Nomesy (obviously not my real name), and I live in <a href="https://en.wikipedia.org/wiki/Perth">Perth, Western Australia</a></p>
+  </div id='about'>Hello, my name is Nomesy (obviously not my real name), and I live in <a href="https://en.wikipedia.org/wiki/Perth">Perth, Western Australia</a></div>
   
   
 </body>
