--- a/about.html
+++ b/about.html
@@ -15,7 +15,12 @@
 <body style="background-color:black">
   <h1>About me!</h1>
   <div class="about">Hello, my name is Nomesy (obviously not my real name), and I live in <a href="https://en.wikipedia.org/wiki/Perth">Perth, Western Australia</a><br>
-  I've lived here most of my life, except for the 13 years between January 2001 and January 2014, when I lived in <a href="https://en.wikipedia.org/wiki/Brisbane">Brisbane, Queensland</a><br>
+  I've lived here most of my life, except for the 13 years between January 2001 and January 2014, when I lived in <a href="https://en.wikipedia.org/wiki/Brisbane">Brisbane, Queensland.</a><br>
+  In years past, I have had my own personal website (now defunct), as well as a blog (no longer updated, but still around... I think), and have decided to get back into having my own website, that I have coded myself using HTML/CSS. A lot of people might ask why I choose to do it this way, when there are several platforms online (e.g. Squarespace, Wix) that will allow me to quickkly and easily build a website, with "no coding required".<br>
+  <br>
+  Put simply: When I first learned to build web pages in 1997/98 as part of an electronic publishing course I was doing, I loved learning about how things worked, and how text and images could be displayed on a page using code. I spent many an hour coding my own website from scratch, and learning new things, such as how to implement frames, adding hyperlinks, images, and manipulating text, in order to display it how I wanted.<br>
+  <br>
+    
     
   </div>
   
