--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 </head>
 
 <!-- BODY TAG START -->
-<body style="background-color:black">
+<body style="background-color:#111111">
   <h1>About me!</h1>
   <div class="about">Hello, my name is Nomesy (obviously not my real name), and I live in <a href="https://en.wikipedia.org/wiki/Perth">Perth, Western Australia</a><br>
   I've lived here most of my life, except for the 13 years between January 2001 and January 2014, when I lived in <a href="https://en.wikipedia.org/wiki/Brisbane">Brisbane, Queensland.</a>
