--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <p>This is currently a placeholder page for Gnomish Designz</p>
   <p>More will be added over time, so please check back again.</p>
   
-  <a href="https://nomesynomes.github.io/gnomishdezign/about.html">About Me</a>
+  <p><a href="https://nomesynomes.github.io/gnomishdezign/about.html">About Me</a></p>
   
 </body>
 </html>
