--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   <!-- Start body tag -->
   
-<body style="background-color:darkgrey">
+<body style="background-color:DarkSlateGray">
   <!-- Page heading -->
   
 <h1>Welcome to Gnomish Designz!</h1>
