--- a/tester.html
+++ b/tester.html
@@ -15,6 +15,8 @@
 <body style="background-color:DarkSlateGray">
 
 <h1>TEST PAGE</h1>
+  
+  <div class="gradient"></div>
 
 <p>Test page for CSS</p>
 
