--- a/tester.html
+++ b/tester.html
@@ -11,13 +11,12 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono&family=Square+Peg&display=swap" rel="stylesheet">
   
- <div class="gradient"></div>
 
 </head>
 
 <body style="background-color:DarkSlateGray">
 
-<h1>TEST PAGE</h1>
+<div class="gradient"></div><h1>TEST PAGE</h1>
   
 
 <p>Test page for CSS</p>
