--- a/tester.html
+++ b/tester.html
@@ -16,7 +16,7 @@
 
 <body style="background-color:DarkSlateGray">
 
-<div class="gradient"></div><h1>TEST PAGE</h1>
+<div class="background"></div><h1>TEST PAGE</h1>
   
 
 <p>Test page for CSS</p>
