--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
   <!-- BODY TAG START -->
   
   <body style="background-color:silver">
-    <h1>Resuma - Axelle de Taille</h1>
+    <h1>Resume - Axelle de Taille</h1>
     
   </body>
   
