--- a/tester.html
+++ b/tester.html
@@ -11,6 +11,21 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono&family=Square+Peg&display=swap" rel="stylesheet">
   
+<style>
+.parallax {
+  /* The image used */
+  background-image: url("img_parallax.jpg");
+
+  /* Set a specific height */
+  min-height: 500px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+</style>
 
 </head>
 
@@ -21,7 +36,7 @@
 
 <p>Test page for CSS</p>
   
-  <style id="parallax"></style>
+  <div class="parallax"></style>
 
 </body>
 
