--- a/tester.html
+++ b/tester.html
@@ -14,7 +14,7 @@
 <style>
 .parallax {
   /* The image used */
-  background-image: url("img_parallax.jpg");
+  background-image: url("https://raw.githubusercontent.com/NomesyNomes/gnomishdezign/images/images/gingerkitten.jpg");
 
   /* Set a specific height */
   min-height: 500px;
