--- a/tester.html
+++ b/tester.html
@@ -11,6 +11,7 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono&family=Square+Peg&display=swap" rel="stylesheet">
   
+<!-- STYLE TAGS FOR POSSIBLE PARALLAX EFFECT -->
 <style>
 .parallax {
   /* The image used */
@@ -29,10 +30,12 @@
 
 </head>
 
+  <!-- BEGIN BODY SECTION -->
+  
 <body style="background-color:DarkSlateGray">
 
 <div class="gradient"></div><h1>TEST PAGE</h1>
-  <div class="parallax"></div>  
+  
 
 <p>Test page for CSS</p>
   <br>
@@ -44,12 +47,6 @@
 <br>
 <br>
 <p>Nullam maximus varius iaculis. Ut quis mi dapibus, porta sapien dapibus, posuere risus. Donec sit amet dictum augue. Vestibulum pulvinar erat et nisl sagittis gravida. Cras ac velit ex. Mauris blandit, ex sed convallis accumsan, arcu urna pharetra eros, vitae accumsan tortor turpis at magna. Proin aliquet, odio at sagittis tempus, nunc tortor convallis diam, vel convallis nisi nisl quis dolor. Aliquam id ornare dolor. Morbi diam nunc, posuere in diam vitae, hendrerit finibus sapien. Nunc ullamcorper lacus at dignissim faucibus. Integer rhoncus neque ligula, ac iaculis metus tempus et. Suspendisse a lobortis arcu, at scelerisque velit.</p>
-<br>
-<br>
-<p>Pellentesque vitae elit ut odio vehicula blandit at at ante. Sed turpis sem, condimentum nec pulvinar sed, dignissim et leo. Donec sodales maximus urna varius gravida. Maecenas ut varius est, quis congue velit. In nec dolor euismod lectus ornare tempor. Donec enim tortor, facilisis vel ligula ut, tincidunt auctor magna. Morbi volutpat est dolor, in hendrerit elit mollis nec. Nam maximus imperdiet arcu ut ullamcorper. In vel enim non velit placerat laoreet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Fusce efficitur ornare quam id auctor. Integer posuere massa in leo vehicula, eget porttitor elit hendrerit. Praesent lobortis lectus elit, non blandit purus dignissim sit amet. Vivamus eleifend porta eros ac facilisis.</p>
-<br>
-<br>
-<p>In nisi ante, elementum a ornare eget, vehicula in diam. Praesent erat sapien, tristique sit amet gravida sed, molestie id leo. Etiam congue auctor arcu vitae maximus. Aenean fringilla ut velit eu euismod. Sed vel lorem quis ante tristique ullamcorper. Nunc venenatis tellus a tortor gravida mattis. Praesent finibus placerat ante, vel rutrum enim facilisis in. Vestibulum sem sem, interdum congue lobortis a, porttitor at risus. Praesent odio nulla, lacinia nec convallis eu, accumsan at massa. Mauris odio diam, congue nec rhoncus vitae, tempus eu justo. Nunc fermentum ultrices lacinia. Phasellus dignissim dolor ut ante ullamcorper gravida. Mauris mollis porta nibh, et hendrerit sem fringilla sed. Donec leo nunc, sodales nec ipsum vel, ullamcorper ornare ipsum. Maecenas luctus mi non est iaculis egestas. Aliquam dignissim et nulla et dapibus.</p>
 <br>
 <br>
 </body>
